[package]
name = "chain-data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
moka = "0.12.10"
serde = { version = "1.0.219", features = ["derive"] }
solana-sdk = "2.2.1"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.5", features = ["cors"] }
#solana-transaction-status = "2.2.3"
#solana-sdk = "2.2.3"

