[package]
name = "chain-data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
moka = { version = "0.12", features = ["future"] }
serde = { version = "1.0.219", features = ["derive"] }
solana-sdk = "2.2.1"
solana-client = "2.2.1"
solana-transaction-status = "2.2.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "tls-native-tls"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
chrono = "0.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
#solana-transaction-status = "2.2.3"
#solana-sdk = "2.2.3"
bs58 = "0.4.0"
serde_json = "1.0.140"
spl-token = "7.0.0"
reqwest = { version = "0.12.14", features = ["json"] }
futures = "0.3.31"
num_cpus = "1.16.0"
